--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!--<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
-	<title> Hello checking whether this is working (version3) </title>
+	<title> Check check Hello checking whether this is working (version3) </title>
 </head>
 <body>
 	<h1> Hello Coursera! This is a good course</h1>
